--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -23,6 +23,8 @@ h6 {
     font-weight: 700;
     letter-spacing: 1px;
 }
+
+
 
 p {
     margin: 0 0 25px;
@@ -53,6 +55,10 @@ a:focus {
 
 .light {
     font-weight: 400;
+}
+
+.minHeight {
+	min-height: 100%;
 }
 
 .navbar {
@@ -240,6 +246,11 @@ a:focus {
 
 section#about {
     color: #3bbce0;
+    padding: 100px 0;
+}
+section#download {
+    height: 100%;
+    padding: 0;
 }
 
 #footer {
@@ -253,15 +264,15 @@ section#about {
 }
 
 .download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/230.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+	min-height: 100%;
+	padding: 50px 0;
+	color: #fff;
+	background: url(../img/230.jpg) no-repeat center center scroll;
+	background-color: #000;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
 }
 
 .icon-box {
@@ -298,6 +309,7 @@ section#about {
 
     .download-section {
         padding: 100px 0;
+        height: 100%;
     }
 
 }
@@ -322,12 +334,12 @@ section#about {
     position: relative;
 }
 
-#be-sh img {
+#be-sh-img {
     width: 100%;
 }
 
 
-/*** 以下ボタン等 ***/
+/*** 莉･荳九・繧ｿ繝ｳ遲・***/
 
 .btn {
     text-transform: uppercase;
